z-index overlapping issue, outageNotification right padding

--- a/node-app/src/views/advisorhub/components/content/outage-list/style.scss
+++ b/node-app/src/views/advisorhub/components/content/outage-list/style.scss
@@ -1,4 +1,9 @@
 @import '../../../base/core';
+.site-level-notification {
+    .outageNotification {
+        padding-right: 10px;
+    }
+}
 .outage-detail{
     #known-outage{
         outline: none;
